--- a/css/popup.css
+++ b/css/popup.css
@@ -10,6 +10,7 @@
     border: none;
     width: 280px;
     font-size: 20px;
+    display: none;
 } 
  
   /* The popup form */
@@ -20,8 +21,6 @@
 	position: fixed;
 	top: 0;
 	display: none;
-	
-	
   }
 
   /*  styles to  container */
@@ -96,5 +95,11 @@
 #close:hover
 {
   color: red;
-} 
+}
+#main-content
+{
+  display: none;
+}
+
+
 
