--- a/css/popup.css
+++ b/css/popup.css
@@ -28,8 +28,9 @@
     width: 400px;
     background-color:#eee;
     position: fixed;
-    top: 300px;
-    left: 700px;
+    top: 35%;
+    left: 50%;
+    transform: translateX(-50%);
     height: 220px;
   }
   .content
